# falconeri

./: .dockerignore  .gitignore  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  MINIKUBE.md  PREEMPTION.md  README.md  TODO.org  build-release  commands.html  deny.toml  images.html  index.html  install-static  installation.html  introduction.html  justfile  print.html  searchindex.js  searchindex.json  specification.html
.github/workflows/: ci.yml
commands/: connecting.html  db.html  job.html
examples/word-frequencies/: Dockerfile  justfile  word-frequencies.json  word-frequencies.sh
examples/word-frequencies/texts/: buffalo-public-library-1883.txt
falconeri/: Cargo.toml
falconeri-worker/: Cargo.toml
falconeri-worker/src/: main.rs
falconeri/src/: description.rs  example_pipeline_spec.json  inputs.rs  main.rs  manifest.rs  pipeline.rs  run.rs
falconeri/src/cmd/: db.rs  deploy.rs  deploy_manifest.yml  deploy_manifest.yml.hbs  job_manifest.yml  migrate.rs  mod.rs  proxy.rs  run.rs  run_manifest.yml  secret_manifest.yml.hbs
falconeri/src/cmd/datum/: describe.rs  describe.txt.hbs  mod.rs
falconeri/src/cmd/job/: describe.rs  describe.txt.hbs  job_manifest.yml.hbs  list.rs  ls.rs  mod.rs  retry.rs  run.rs  schema.rs  wait.rs
falconeri_common/: Cargo.toml  diesel.toml
falconeri_common/migrations/2018-07-06-112750_create_job_and_datum/: down.sql  up.sql
falconeri_common/migrations/2018-08-28-123755_add_input_file_job_id/: down.sql  up.sql
falconeri_common/migrations/2019-01-23-214049_add_datum_backtrace_and_output/: down.sql  up.sql
falconeri_common/migrations/2019-05-04-120837_restrict_workers_to_one_running_datum/: down.sql  up.sql
falconeri_common/migrations/2021-11-23-163415_add_datum_run_counts/: down.sql  up.sql
falconeri_common/src/: connect_via.rs  db.rs  errors.rs  example_pipeline_spec.json  kubernetes.rs  lib.rs  manifest.rs  pipeline.rs  rest_api.rs  schema.rs  secret.rs  tracing_support.rs
falconeri_common/src/models/: datum.rs  file.rs  input_file.rs  job.rs  mod.rs  output_file.rs
falconeri_common/src/storage/: gs.rs  mod.rs  s3.rs
falconerid/: Cargo.toml  Rocket.toml
falconerid/src/: babysitter.rs  inputs.rs  job_manifest.yml.hbs  main.rs  start_job.rs  util.rs
guide/: book.toml
guide/src/: SUMMARY.md  commands.md  images.md  installation.md  introduction.md  specification.md
guide/src/commands/: connecting.md  db.md  job.md
