[package]
name = "falconeri-worker"
version = "1.0.0-beta.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

license = "Apache-2.0 OR MIT"

[dependencies]
crossbeam = "0.8.1"
env_logger = "0.9.0"
falconeri_common = { path = "../falconeri_common" }
glob = "0.3"
log = "0.4.3"
# Needed for ekidd/rust-musl-builder.                                                                   
openssl-sys = "*" 
openssl-probe = "0.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
