[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
name = "falconeri"
version = "0.2.1-alpha.0"
edition = "2018"

[dependencies]
base64 = "0.10"
crossbeam = "0.7"
env_logger = "0.6"
failure = "0.1.1"
falconeri_common = { path = "../falconeri_common" }
handlebars = "1.0.0-beta.4"
log = "0.4.3"
# Needed for ekidd/rust-musl-builder.
openssl = "*"
openssl-probe = "0.1.2"
prettytable-rs = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.2.10"
uuid = { version = "0.7", features = ["serde", "v4"] }
