[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
name = "falconeri"
version = "0.2.12"
edition = "2018"

[dependencies]
base64 = "0.13"
crossbeam = "0.8.1"
falconeri_common = { path = "../falconeri_common" }
handlebars = "4.1.4"
log = "0.4.3"
# Needed for ekidd/rust-musl-builder.
openssl = "*"
openssl-probe = "0.1.2"
prettytable-rs = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.25"
uuid = { version = "0.8", features = ["serde", "v4"] }
