[package]
name = "falconeri_common"
version = "0.2.8"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

[dependencies]
backoff = "0.1.2"
base64 = "0.10"
cast = "0.2.2"
chrono = { version = "0.4.4", features = ["serde"] }
common_failures = "0.1.1"
diesel = { version = "1.3.0", features = ["chrono", "postgres", "r2d2", "serde_json", "uuidv07"] }
diesel_migrations = "1.3.0"
failure = "0.1.1"
handlebars = "1.0.0-beta.4"
lazy_static = "1.0.2"
log = "0.4.3"
r2d2 = "0.8.4"
rand = "0.6"
regex = "1.0.2"
reqwest = "0.9.14"
semver = "0.9.0"
serde = "1.0.70"
serde_json = "1.0"
url = "1.7.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
