[package]
name = "falconeri_common"
version = "0.2.10"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
backoff = "0.3.0"
base64 = "0.13.0"
cast = { version = "0.3.0", features = ["std"] }
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["chrono", "postgres", "r2d2", "serde_json", "uuidv07"] }
diesel_migrations = "1.3.0"
handlebars = "4.1.4"
humantime-serde = "1.0.1"
lazy_static = "1.0.2"
r2d2 = "0.8.4"
rand = "0.8.4"
regex = "1.0.2"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
semver = "1.0.4"
serde = "1.0.70"
serde_json = "1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
