[package]
name = "falconerid"
version = "0.2.12"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

[dependencies]
falconeri_common = { path = "../falconeri_common" }
headers = "0.3.5"
# Needed for ekidd/rust-musl-builder.
openssl = "*"
openssl-probe = "0.1.2"
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

